assert-struct/tests/snapshots/index_operations__index_comparison_failure.snap
---
source: assert-struct/tests/index_operations.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/index_operations_errors/index_comparison_failure.rs:15:20
   |
15 |         values[1]: > 20,  // Should be > 20, but actual is 15
   |                    ^^^^ got 15
